tests/syntax/bad/testfile-semicolon-6.go
package main

func main() {
  "oups"
  / 2
}
